<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrekMate</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_failed">Login failed</string>

    <!-- Login Screen -->
    <string name="app_logo_desc">App Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="no_account_register">Don’t have an account? Register</string>
    <string name="error_email_required">Email required</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_password_required">Password required</string>

    <!-- Register Screen -->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Login</string>
</resources>
